--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
     </div>
 
     <div class="gridBox">
-        <div class="foruneCookieBox1"><img src="/images/Playgroundimage.jpg" alt="" class="one"><p class="imageNumber1">1</p></div>
-        <div class="foruneCookieBox2"><img src="/images/Playgroundimage.jpg" alt="" class="two"><p class="imageNumber2">2</p></div>
-        <div class="foruneCookieBox3"><img src="/images/Playgroundimage.jpg" alt="" class="three"><p class="imageNumber3">3</p></div>
-        <div class="foruneCookieBox4"><img src="/images/Playgroundimage.jpg" alt="" class="four"><p class="imageNumber4">4</p></div>
-        <div class="foruneCookieBox5"><img src="/images/Playgroundimage.jpg" alt="" class="five"><p class="imageNumber5">5</p></div>
-        <div class="foruneCookieBox6"><img src="/images/Playgroundimage.jpg" alt="" class="six"><p class="imageNumber6">6</p></div>
-        <div class="foruneCookieBox7"><img src="/images/Playgroundimage.jpg" alt="" class="seven"><p class="imageNumber7">7</p></div>
-        <div class="foruneCookieBox8"><img src="/images/Playgroundimage.jpg" alt="" class="eight"><p class="imageNumber8">8</p></div>
-        <div class="foruneCookieBox9"><img src="/images/Playgroundimage.jpg" alt="" class="nine"><p class="imageNumber9">9</p></div>
-        <div class="foruneCookieBox10"><img src="/images/Playgroundimage.jpg" alt="" class="ten"><p class="imageNumber10">10</p></div>
+        <div class="foruneCookieBox1"><img src="./images/Playgroundimage.jpg" alt="" class="one"><p class="imageNumber1">1</p></div>
+        <div class="foruneCookieBox2"><img src="./images/Playgroundimage.jpg" alt="" class="two"><p class="imageNumber2">2</p></div>
+        <div class="foruneCookieBox3"><img src="./images/Playgroundimage.jpg" alt="" class="three"><p class="imageNumber3">3</p></div>
+        <div class="foruneCookieBox4"><img src="./images/Playgroundimage.jpg" alt="" class="four"><p class="imageNumber4">4</p></div>
+        <div class="foruneCookieBox5"><img src="./images/Playgroundimage.jpg" alt="" class="five"><p class="imageNumber5">5</p></div>
+        <div class="foruneCookieBox6"><img src="./images/Playgroundimage.jpg" alt="" class="six"><p class="imageNumber6">6</p></div>
+        <div class="foruneCookieBox7"><img src="./images/Playgroundimage.jpg" alt="" class="seven"><p class="imageNumber7">7</p></div>
+        <div class="foruneCookieBox8"><img src="./images/Playgroundimage.jpg" alt="" class="eight"><p class="imageNumber8">8</p></div>
+        <div class="foruneCookieBox9"><img src="./images/Playgroundimage.jpg" alt="" class="nine"><p class="imageNumber9">9</p></div>
+        <div class="foruneCookieBox10"><img src="./images/Playgroundimage.jpg" alt="" class="ten"><p class="imageNumber10">10</p></div>
     </div>
 
     <div class="cookieMessages">
