--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="gridBox">
-        <div class="foruneCookieBox1"><img src="./images/Playgroundimage.jpg" alt="" class="one"><p class="imageNumber1">1</p></div>
+        <div class="foruneCookieBox1"><img src="images/Playgroundimage.jpg" alt="" class="one"><p class="imageNumber1">1</p></div>
         <div class="foruneCookieBox2"><img src="./images/Playgroundimage.jpg" alt="" class="two"><p class="imageNumber2">2</p></div>
         <div class="foruneCookieBox3"><img src="./images/Playgroundimage.jpg" alt="" class="three"><p class="imageNumber3">3</p></div>
         <div class="foruneCookieBox4"><img src="./images/Playgroundimage.jpg" alt="" class="four"><p class="imageNumber4">4</p></div>
