--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="foruneCookieBox7"><img src="./images/Playgroundimage.jpg" alt="" class="seven"><p class="imageNumber7">7</p></div>
         <div class="foruneCookieBox8"><img src="./images/Playgroundimage.jpg" alt="" class="eight"><p class="imageNumber8">8</p></div>
         <div class="foruneCookieBox9"><img src="./images/Playgroundimage.jpg" alt="" class="nine"><p class="imageNumber9">9</p></div>
-        <div class="foruneCookieBox10"><img src="./images/Playgroundimage.jpg" alt="" class="ten"><p class="imageNumber10">10</p></div>
+        <div class="foruneCookieBox10"><img src="https://raw.githubusercontent.com/thedevguy365/cookies/refs/heads/main/images/PlaygroundImage.jpg" alt="" class="ten"><p class="imageNumber10">10</p></div>
     </div>
 
     <div class="cookieMessages">
